# the-league

./: Cargo.toml  LICENSE  Makefile  README.md
Config/crds/: kustomization.yaml
Config/crds/standard/: league.bexxmodd_com.gameresults.yaml  league.bexxmodd_com.standings.yaml  league.bexxmodd_com.theleagues.yaml
config/crds/standard/: league.bexxmodd_com.gameresults.yaml  league.bexxmodd_com.standings.yaml  league.bexxmodd_com.theleagues.yaml
config/rbac/: kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml  theleague_admin_role.yaml  theleague_editor_role.yaml  theleague_viewer_role.yaml
src/: lib.rs  main.rs
src/api/v1alpha1/: game_result_types.rs  mod.rs  standing_types.rs  the_league_types.rs
src/controller/: controller.rs  mod.rs  theleague_controller.rs
